src/objects/Clinical_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>Catalog_Name__c</fullName>
        <description>Clinical Catalog Name</description>
        <inlineHelpText>Clinical Catalog Name for this tree</inlineHelpText>
        <label>Catalog Name</label>
        <length>75</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>ARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Category__c</fullName>
        <label>Item Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Category_del__c</fullName>
        <label>Item Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clinical Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>